# fileviewer

./: .gitignore  App.vue  CLAUDE.md  MANIFEST.in  Makefile  README.md  README.zh.md  SlotHost.vue  ViewerHost.vue  cli.py  config.py  index.html  main.js  package.json  pnpm-lock.yaml  pyproject.toml  server.py  setup.cfg  vite.config.js
fileviewer/: auth_state.py  cli.py  config.py  http_client.py  server.py
fileviewer/routers/: archive.py  auth.py  dataframe_reader.py  files.py  hex_reader.py  images.py  media.py  parquet_reader.py  text_reader.py  write_ops.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
kernel/: EventBus.js  PluginContext.js  PluginManager.js  ServiceRegistry.js  builtins.py  context.py  event_bus.py  index.js  manifest.py  plugin_manager.py  service_registry.py
plugins/archive/: ArchiveTreeNode.vue  ArchiveViewer.vue  CompressTaskItem.vue  ExtractTaskItem.vue  api.js  index.js  manifest.js  plugin.py  plugin.toml  router.py  state.js
plugins/auth/: LoginPage.vue  api.js  index.js  manifest.js  plugin.py  plugin.toml
plugins/bookmarks/: BookmarksList.vue  index.js  manifest.js
plugins/dataframe/: DataFrameViewer.vue  api.js  index.js  manifest.js  plugin.py  plugin.toml
plugins/explorer/: ExplorerAppBar.vue  ExplorerContent.vue  ExplorerSidebar.vue  ToolbarHost.vue  index.js  manifest.js  state.js  useContextMenu.js  useExplorerKeyboard.js
plugins/file-types/: index.js  manifest.js
plugins/fs-ops/: ClipboardBar.vue  DeleteTaskItem.vue  PasteTaskItem.vue  api.js  errors.js  index.js  manifest.js  state.js
plugins/fs_local/: api.js  index.js  manifest.js  plugin.py  plugin.toml
plugins/hex/: HexViewer.vue  api.js  index.js  manifest.js  plugin.py  plugin.toml
plugins/image/: ImageComparisonViewer.vue  ImageEditor.vue  ImageMetaSection.vue  ImageViewer.vue  api.js  index.js  manifest.js  plugin.py  plugin.toml
plugins/keyboard/: index.js  manifest.js  useKeyboard.js
plugins/layout-list/: ListView.vue  RootsListView.vue  index.js  manifest.js
plugins/layout-switcher/: LayoutToggleGroup.vue  index.js  manifest.js
plugins/layout-waterfall/: FileCard.vue  RootsWaterfallView.vue  (+3 more)
(+330 files in other folders)
