[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileviewerv2"
version = "2.0.0"
description = "File Viewer v2 — plugin-based architecture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "polars>=0.20",
    "httpx>=0.27",
    "async-lru>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
archive = ["py7zr", "pyzipper"]

[project.scripts]
fileviewerv2 = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernel*", "plugins*"]
