[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileviewer"
version = "2.0.0"
description = "File Viewer — plugin-based architecture"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "polars>=0.20",
    "httpx>=0.27",
    "async-lru>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "pyzipper>=0.3",
    "psd_tools>=1.16.0",
    "mutagen>=1.47.0"
]

[project.optional-dependencies]
archive = ["py7zr"]

[project.scripts]
fileviewer = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernel*", "plugins*", "static*"]

[tool.setuptools.package-data]
static = ["**/*"]
"*" = ["*.toml"]

[tool.setuptools]
py-modules = ["cli", "server", "config"]
