[metadata]
name = fileviewer
version = 0.1.0
description = Read-only file browser with web UI (images, parquet, JSON, text)

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires =
    fastapi>=0.109.0
    uvicorn[standard]>=0.27.0
    polars>=0.20.0
    pillow>=10.0.0
    pyyaml>=6.0.0
    python-multipart>=0.0.9
    tomli>=2.0.0; python_version < "3.11"

[options.packages.find]
include = fileviewer*

[options.entry_points]
console_scripts =
    fileviewer = fileviewer.cli:main

[options.package_data]
fileviewer = static/**/*
